# claude-sketch

./: .mcp.json  Cargo.toml  README.md  marketplace.json  notes.md  setup.sh
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: build-venvs.yml  build.yml
commands/: sketch.md
crates/claude-sketch-mcp/: Cargo.toml
crates/claude-sketch-mcp/src/: main.rs  mcp_protocol.rs  sketch_manager.rs  terminal_launcher.rs  tools.rs
crates/claude-sketch-runtime/: Cargo.toml
crates/claude-sketch-runtime/src/: app.rs  events.rs  lib.rs  terminal.rs
crates/claude-sketch-runtime/src/widgets/: button.rs  counter.rs  input.rs  mod.rs
examples/: counter.py
examples/counter/: Cargo.toml
examples/counter/src/: main.rs
hooks/: auto-approve-sketch.sh  hooks.json
scripts/: build-venv.sh
skills/sketch/: SKILL.md
src/claude_sketch/: __init__.py
src/claude_sketch/runtime/: __init__.py  app.py
