[workspace]
resolver = "2"
members = [
    "crates/claude-sketch-mcp",
    "crates/claude-sketch-runtime",
    "examples/counter",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Claude Sketch Contributors"]

[workspace.dependencies]
# Runtime dependencies
ratatui = "0.29"
crossterm = "0.28"

# MCP server and common dependencies
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Common
anyhow = "1"
thiserror = "2"
dirs = "6"
