[package]
name = "claude-sketch-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server for claude-sketch - enables Claude Code to create interactive terminal sketches"

[[bin]]
name = "claude-sketch-mcp"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
